--- a/css/test.css
+++ b/css/test.css
@@ -179,6 +179,13 @@ button:hover {
   background-color: rgba(77, 4, 211, 1);
 }
 
+button:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
 #result{
   display: flex;
   flex-direction: column;
